# OpenGL_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: conf.hpp  main.cpp  shader.cpp  shader.hpp
